# celeryradar-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
celeryradar_sdk/: __init__.py  beat.py  client.py  integration.py  poller.py  queues.py
tests/: test_args_capture.py  test_client.py  test_connect.py  test_exceptions_capture.py  test_normalize_entry.py  test_poller.py  test_queues.py  test_worker_name.py
