[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "celeryradar-sdk"
version = "0.2.1"
description = "Celery monitoring SDK — task events, worker heartbeats, beat schedules, and queue depths."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kasey Steinhauer", email = "kasey@celeryradar.com" }]
keywords = ["celery", "monitoring", "observability", "tasks", "beat", "django", "redis", "task-queue", "celery-monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Celery",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "celery>=5.0,<6",
    "redis>=4.0",
]

[project.optional-dependencies]
test = ["fakeredis>=2.0"]

[project.urls]
Homepage = "https://celeryradar.com"
Source = "https://github.com/kadam257/celeryradar-sdk"
Issues = "https://github.com/kadam257/celeryradar-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["celeryradar_sdk*"]
exclude = ["tests*"]
